# driftwm-launcher

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  config.toml.example  style.css
.github/workflows/: ci.yml
src/: app_entry.rs  config.rs  launcher.rs  main.rs
