[package]
name = "driftwm-launcher"
version = "0.1.0"
edition = "2024"
authors = ["wwmaxik"]
description = "Minimal Wayland application launcher for driftwm"
license = "GPL-3.0-or-later"
repository = "https://github.com/wwmaxik/driftwm-launcher"

[dependencies]
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
freedesktop-desktop-entry = "0.5"
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

